--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-react-views": "^0.11.0",
     "express-session": "^1.17.1",
     "method-override": "^3.0.0",
+    "mongo-connect": "0.0.6",
     "mongoose": "^5.10.6",
     "morgan": "^1.10.0",
     "react": "^16.13.1",
