--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-mongo": "^3.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-react-views": "^0.11.0",
     "express-session": "^1.17.1",
     "method-override": "^3.0.0",
-    "mongo-connect": "0.0.6",
     "mongoose": "^5.10.6",
     "morgan": "^1.10.0",
     "react": "^16.13.1",
